# markdown2pdf_resume_builder

./: .gitignore  CHANGELOG.md  Makefile  README.md  example_usage.sh  main.py  main_unified.py  pyproject.toml  requirements.txt  resume_builder  resume_builder_reportlab.py  resume_vibhor_janey_updated_aug_2025.md
docs/: API.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md
examples/: example_usage.sh
scripts/: main_legacy.py
src/markdown2pdf_resume_builder/: __init__.py  __main__.py  cli.py  resume_builder.py  themes.py
tests/: conftest.py  test_cli.py  test_resume_builder.py
