[project]
name = "markdown2pdf-resume-builder"
version = "1.0.0"
description = "A professional resume builder that converts Markdown to beautifully formatted PDFs with dynamic sizing and ATS-friendly formatting"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Vibhor Janey", email = "vibhor.janey@gmail.com" }
]
license = { text = "Apache-2.0" }
keywords = ["resume", "pdf", "markdown", "cv", "ats-friendly", "template", "professional"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "markdown2>=2.5.0",
    "reportlab>=4.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
markdown2pdf-resume-builder = "markdown2pdf_resume_builder.cli:main"
resume-builder = "markdown2pdf_resume_builder.cli:main"

[project.urls]
Homepage = "https://github.com/Vibz28/markdown2pdf_resume_builder"
Documentation = "https://github.com/Vibz28/markdown2pdf_resume_builder#readme"
Repository = "https://github.com/Vibz28/markdown2pdf_resume_builder"
Issues = "https://github.com/Vibz28/markdown2pdf_resume_builder/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tool configurations
[tool.hatch.build.targets.wheel]
packages = ["src/markdown2pdf_resume_builder"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "docs/",
    "examples/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "reportlab.*",
    "markdown2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/markdown2pdf_resume_builder",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
